--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="bio">
     
         <section class="banner">
-
+            <img src="img/logo.png" alt="">
         </section>
         
         <section class="nome">
