--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <section class="botao">
 
-            <a href="https://wa.me/5527996412502?text=Ol%C3%A1.%20Preciso%20de%20uma%20ajuda.%20" target="_blank"></a><div class="um">
+            <a href="https://wa.me/5527996412502?text=Ol%C3%A1.%20Preciso%20de%20uma%20ajuda.%20" target="_blank"><div class="um">
                 <img src="img/whatsapp.png">
                 <div class="texto">
                     <p>Acesse o</p>
